--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -35,18 +35,17 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/scala</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.3.3</version>
                 <executions>
                     <execution>
                         <goals>
@@ -54,10 +53,7 @@
                             <goal>testCompile</goal>
                         </goals>
                         <configuration>
-                            <args>
-                                <arg>-dependencyfile</arg>
-                                <arg>${project.build.directory}/.scala_dependencies</arg>
-                            </args>
+                            <scalaVersion>${scala.version}</scalaVersion>
                         </configuration>
                     </execution>
                 </executions>
